--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
    "source": [
     "def print_dict(dictionary):\n",
     "    for key, value in dictionary.items():\n",
-    "        print(\"\\t{}: {}\".format(key, value))\n",
+    "        print(f\"\\t{key}: {value}\")\n",
     "person = {\n",
     "    \"first_name\": \"Muhammad\",\n",
     "    \"last_name\": \"Tehami\",\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
     "for city, info in cities.items():\n",
     "    print(city.upper()+\":\")\n",
     "    for key, value in info.items():\n",
-    "        print(\"\\t{}: {}\".format(key, value))"
+    "        print(f\"\\t{key}: {value}\")"
    ]
   },
   {
@@ -136,25 +136,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your age:  2\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your age: 2\n",
-      "The ticket is free.\n",
+      "The ticket is free.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "Do you want to check one more? (y/n)\n",
-      "y\n",
-      "Enter your age: 5\n",
-      "The ticket is $10.\n",
+      " y\n",
+      "Enter your age:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ticket is $10.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "Do you want to check one more? (y/n)\n",
-      "y\n",
-      "Enter your age: 20\n",
-      "The ticket is $15.\n",
+      " y\n",
+      "Enter your age:  16\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ticket is $15.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "Do you want to check one more? (y/n)\n",
-      "n\n"
+      " n\n"
      ]
     }
    ],
@@ -183,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +232,7 @@
    ],
    "source": [
     "def favorite_book(book_title):\n",
-    "    print(\"One of my favorite books is {}.\".format(book_title))\n",
+    "    print(f\"One of my favorite books is {book_title}.\")\n",
     "\n",
     "favorite_book(\"Alice in Wonderland\")"
    ]
@@ -212,20 +248,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your guess:  17\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your guess: 15\n",
-      "Wrong! Hint: The number is greater than the number you gave.\n",
-      "Enter your guess: 26\n",
+      "Wrong! Hint: The number is greater than the number you gave.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your guess:  26\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong! Hint: The number is smaller than the number you gave.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your guess:  22\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Wrong! Hint: The number is smaller than the number you gave.\n",
-      "Enter your guess: 20\n",
-      "Wrong! Hint: The number is smaller than the number you gave.\n",
-      "Sorry you lost. The number was 19.\n"
+      "Sorry you lost. The number was 18.\n"
      ]
     }
    ],
@@ -238,13 +304,14 @@
     "    guess = int(input(\"Enter your guess: \"))\n",
     "    if guess == number:\n",
     "        win = True\n",
-    "        print(\"Your guess is correct. The number was {}.\".format(number))\n",
+    "        print(f\"Your guess is correct. The number was {number}.\")\n",
+    "        break\n",
     "    elif guess > number:\n",
     "        print(\"Wrong! Hint: The number is smaller than the number you gave.\")\n",
     "    elif guess < number:\n",
     "        print(\"Wrong! Hint: The number is greater than the number you gave.\")\n",
     "if not win:\n",
-    "    print(\"Sorry you lost. The number was {}.\".format(number))"
+    "    print(f\"Sorry you lost. The number was {number}.\")"
    ]
   }
  ],
@@ -268,5 +335,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
